--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="./app.js" defer></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link href="./favicon.ico" rel="icon" type="image/x-icon">
 </head>
 
 <body>
